Added buttons styles
The project is ready for the first test

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <h2 class="content-title">More About</h2>
             <p class="text-info">You can read more about Nujabes on his Wikipedia entry and listen to his music on his Spotify profile:</p>
             <ul id="button-links">
-                <li class="links"><a target="_blank" href="https://en.wikipedia.org/wiki/Nujabes">Wikipedia</a></li>
-                <li class="links"><a target="_blank" href="https://open.spotify.com/artist/3Rq3YOF9YG9YfCWD4D56RZ">Spotify</a></li>
+                <li class="links" id="wikipedia-button"><a id="wikipedia-link" target="_blank" href="https://en.wikipedia.org/wiki/Nujabes">Wikipedia</a></li>
+                <li class="links" id="spotify-button"><a id="spotify-link" target="_blank" href="https://open.spotify.com/artist/3Rq3YOF9YG9YfCWD4D56RZ">Spotify</a></li>
             </ul>
         </div>
     </body>
